# azure-pipelines-sample

./: .gitignore  Cargo.toml  README.md  azure-pipelines.yml
.devcontainer/: devcontainer.json
ci/: azure-pipelines.yml
src/: main.rs
