[package]
name = "norauma"
version = "0.1.0"
authors = ["Ryoh Kawai <kawairyo@rg-automated.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
